--- a/package.xml
+++ b/package.xml
@@ -2,11 +2,12 @@
 <package format="2">
   <name>jaco_trajectory</name>
   <version>0.0.0</version>
-  <description>The jaco_trajectory package</description>
+  <description>The jaco_trajectory package. Used for control of the JACO arm.</description>
   <maintainer email="anshumandas19971@gmail.com">Anshuman Das</maintainer>
   <license>TODO</license>
   <url type="website">http://wiki.ros.org/jaco_trajectory</url>
   <author email="anshumandas19971@gmail.com">Anshuman Das</author>
+  
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>controller_manager</build_depend>
   <build_depend>effort_controllers</build_depend>
